<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Material Design App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_night_mode">Night Mode</string>
    <string name="action_day_mode">Day Mode</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear_history">Clear history</string>
    <string name="action_search">Search</string>
    <string name="alert_icon">alert icon</string>
    <string name="icon">icon</string>
    <string name="undo">undo</string>
    <string name="hello_world">Hello World!</string>
    <string name="settings">Settings</string>
    <string name="bind_service">Bind</string>
    <string name="unbind_service">Unbind</string>
    <string name="start_service">Start service</string>
    <string name="stop_service">Stop service</string>
    <string name="start_job_scheduler">Start job scheduler</string>
    <string name="stop_job_scheduler">Stop job scheduler</string>
    <string name="start_broadcast">Broadcast receivers</string>
    <string name="content_providers">Content providers</string>
    <string name="local_notification">Local notification</string>
    <string name="local_hands_up_notification">Hands-up notification</string>
    <string name="local_replying_notification">Replying Notification</string>
    <string name="title">Title</string>
    <string name="cover">Cover</string>
    <string name="subtitle">Subtitle</string>
    <string name="channel">Channel</string>
    <string name="default_string">Default</string>
    <string name="cannot_be_empty">%s cannot be empty</string>
    <string name="no_notification_services_selected">You haven\'t select notification service(s)</string>
    <string name="push">Push</string>
    <string name="share">Share</string>
    <string name="require_charging">Require charging</string>
    <string name="require_battery_not_low">Require battery not low</string>
    <string name="require_device_idle">Require device idle</string>
    <string name="deadline">Deadline</string>
    <string name="latency">Latency</string>
    <string name="empty_in_playlist">Empty in playlist</string>
    <string name="empty_in_database">Empty in database</string>
    <string name="empty_in_playlist_desc">Add music and it will show up here.</string>
    <string name="purchase">Purchase</string>
    <string name="add_icon">Add</string>
    <string name="search_hint">Search</string>
    <string name="add_new_playlist">add new playlist</string>
    <string name="submit">submit</string>
    <string name="module1">BBC News</string>
    <string name="module2">Tour Guide</string>
    <string name="module3">Assets</string>
    <string name="module4">Open Weather</string>
    <string name="download_the_bundle">Download the bundle</string>
    <string name="launch">Launch</string>
    <string name="uninstall">Uninstall</string>
    <string name="notice">Notice</string>
    <string name="ok">OK</string>
    <string name="unfold">Unfold</string>
    <string name="undo_deleted_playlist">Playlist deleted: %1$s</string>

    <!--radio group-->
    <string name="require_network">Require Network</string>
    <string name="any">Any</string>
    <string name="cellular">Cellular</string>
    <string name="unmetered">Unmetered</string>

    <string-array name="drawer_array">
        <item>App components</item>
        <item>Working in the background</item>
        <item>Notification</item>
        <item>UI components</item>
        <item>Lifecycle</item>
        <item>Dynamic Delivery</item>
    </string-array>

    <string-array name="main_fragment_titles">
        <item>Material Design</item>
    </string-array>

    <string-array name="app_components_bottom_sheet_array">
        <item>Create</item>
        <item>Read</item>
        <item>Update</item>
        <item>Delete</item>
    </string-array>

    <string-array name="background_task_array">
        <item>AsyncTask1</item>
        <item>AsyncTask2</item>
        <item>AsyncTaskLoader1</item>
        <item>AsyncTaskLoader2</item>
    </string-array>

    <string-array name="background_task_info_array">
        <item>Click and wait for 5 seconds</item>
        <item>Click and wait for 5 seconds</item>
        <item>Click and wait for 5 seconds</item>
        <item>Click and wait for 5 seconds</item>
    </string-array>

    <string-array name="app_component_array">
        <item>Background service</item>
        <item>Broadcast Receiver</item>
        <item>Content Provider</item>
    </string-array>

    <string-array name="app_component_array_O">
        <item>Foreground service</item>
        <item>Background service</item>
        <item>Broadcast Receiver</item>
        <item>Content Provider</item>
    </string-array>

    <string-array name="ui_component_bottom_navigation">
        <item>Home</item>
        <item>Music</item>
        <item>Favorites</item>
    </string-array>

    <string-array name="music_array">
        <item>ALBUMS</item>
        <item>ARTISTS</item>
        <item>PLAYLISTS</item>
    </string-array>

    <string-array name="bundle_info">
        <item>Download and launch BBC News via Custom Tabs from another Android bundle</item>
        <item>Download and launch Tour Guide via Custom Tabs from another Android bundle</item>
        <item>Download and load assets via Custom Tabs from another Android bundle</item>
        <item>Download and launch Open Weather via Custom Tabs from another Android bundle</item>
    </string-array>

    <string-array name="content_provider_functions">
        <item>System Providers</item>
        <item>Widgets</item>
        <item>Search</item>
        <item>Data storage</item>
        <item>AbstractThreadedSyncAdapter</item>
        <item>Other applications</item>
    </string-array>

    <string-array name="providers">
        <item>CallLogProvider</item>
        <item>ContactsProvider2</item>
    </string-array>

    <!--https://developer.android.com/reference/android/provider/ContactsContract.CommonDataKinds.Phone.html#TYPE_HOME-->
    <string-array name="contact_types">
        <item>Custom Type</item>
        <item>Home</item>
        <item>Mobile</item>
        <item>Work</item>
        <item>Fax Work</item>
        <item>Fax Home</item>
        <item>Pager</item>
        <item>Other</item>
        <item>Callback</item>
        <item>Car</item>
        <item>Company Main</item>
        <item>ISDN</item>
        <item>MAIN</item>
        <item>Other Fax</item>
        <item>Radio</item>
        <item>Telex</item>
        <item>TTY TDD</item>
        <item>Work Mobile</item>
        <item>Work Pager</item>
        <item>Assistant</item>
        <item>MMS</item>
    </string-array>

    <string-array name="lifecycle_items">
        <item>Logcat</item>
        <item>Lifecycle</item>
        <item>Crash Log if exists</item>
    </string-array>

    <string-array name="system_receivers">
        <item>Screen On/Off</item>
        <item>Airplane Mode Changed</item>
        <item>Battery Low</item>
    </string-array>


    <string name="foreground_service" translatable="false">Foreground service</string>
    <string name="background_service" translatable="false">Background service</string>
    <string name="job_scheduler" translatable="false">Job scheduler</string>
    <string name="fcm" translatable="false">Firebase</string>
    <string name="album_image_transition" translatable="false">album_image_transition</string>
    <string name="album_name_transition" translatable="false">album_name_transition</string>
    <string name="album_artist_transition" translatable="false">album_artist_transition</string>
    <string name="content_provider_title_transition" translatable="false">content_provider_title_transition</string>
    <string name="content_provider_bg_transition" translatable="false">content_provider_bg_transition</string>


    <string name="countdown" translatable="false">countdown <xliff:g example="5 days" id="time">%1$s</xliff:g> until
        holiday
    </string>
    <!-- Example placeholder for a special unicode symbol -->
    <string name="star_rating" translatable="false">Check out our 5
        <xliff:g id="star">\u2605</xliff:g>
    </string>
    <!-- Example placeholder for a for a URL -->
    <string name="app_homeurl" translatable="false">Visit us at
        <xliff:g id="application_homepage">http://my/app/home.html</xliff:g>
    </string>
    <!-- Example placeholder for a name -->
    <string name="prod_name" translatable="false">Learn more at
        <xliff:g id="prod_gamegroup">Game Group</xliff:g>
    </string>
    <!-- Example placeholder for a literal -->
    <string name="promo_message" translatable="false">Please use the "<xliff:g id="promotion_code">%s</xliff:g>" to
        get a discount.
    </string>
    <plurals name="numberOfSongsAvailable" translatable="false">
        <!--
             As a developer, you should always supply "one" and "other"
             strings. Your translators will know which strings are actually
             needed for their language. Always include %d in "one" because
             translators will need to use %d for languages where "one"
             doesn't mean 1 (as explained above).
          -->
        <item quantity="zero">no song found.</item>
        <item quantity="one">%d song found.</item>
        <item quantity="other">%d songs found.</item>
    </plurals>

    <plurals name="second">
        <item quantity="zero">%d second</item>
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>

    <plurals name="songs">
        <item quantity="zero">%d song</item>
        <item quantity="one">%d song</item>
        <item quantity="other">%d songs</item>
    </plurals>

    <string name="title_bbc_news" translatable="false">BBC News</string>
    <string name="title_tour_guide" translatable="false">Tour Guide</string>
    <string name="title_assets" translatable="false">Assets</string>
    <string name="title_open_weather" translatable="false">Open Weather</string>
    <string name="preferred_language">Preferred Language</string>
    <string name="strings_from_jni">strings from JNI</string>
    <string name="special_string">special string</string>
    <string name="fingerprint_apkdigest">Fingerprint - ApkDigest</string>
    <string name="fingerprint_apkcertificatedigestsha256">Fingerprint - ApkCertificateDigestSha256</string>
    <string name="fingerprint_sha256">Fingerprint - SHA256</string>
    <string name="fingerprint_sha1">Fingerprint - SHA1</string>
    <string name="md5">MD5</string>
    <string name="packagename">PackageName</string>
    <string name="communicate">Communicate</string>
    <string name="hello_message" translatable="false">Hello, there!</string>
    <string name="new_string" translatable="false">New string: %s</string>
    <string name="empty_string" translatable="false">empty string</string>
    <string name="progress_int" translatable="false">Progress: %d%%</string>
    <string name="canceled_int" translatable="false">%s canceled</string>
</resources>
