<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_oreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/safe_area_margin_width"
            android:layout_marginEnd="@dimen/safe_area_margin_width"
            android:orientation="vertical">

            <Switch
                android:id="@+id/switch_require_network"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_area_height"
                android:text="@string/require_network" />

            <RadioGroup
                android:id="@+id/rb_network"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radio_any"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_area_height"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/any" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radio_cellular"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_area_height"
                    android:layout_weight="1"
                    android:text="@string/cellular" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radio_unmetered"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_area_height"
                    android:layout_weight="1"
                    android:text="@string/unmetered" />
            </RadioGroup>

            <Switch
                android:id="@+id/switch_battery_not_low"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_area_height"
                android:text="@string/require_battery_not_low" />

            <Switch
                android:id="@+id/switch_charging"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_area_height"
                android:text="@string/require_charging" />

            <Switch
                android:id="@+id/switch_device_idle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_area_height"
                android:text="@string/require_device_idle" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/safe_area_margin_height">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/text_area_height"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/latency" />

                <TextView
                    android:id="@+id/tv_latency"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/text_area_height"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true" />

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/sb_latency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/safe_area_margin_height" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/safe_area_margin_height">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/text_area_height"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/deadline" />

                <TextView
                    android:id="@+id/tv_deadline"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/text_area_height"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true" />

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/sb_deadline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/safe_area_margin_height" />
            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_start_job"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/safe_area_margin_width"
                android:layout_marginEnd="@dimen/safe_area_margin_width"
                android:text="@string/start_job_scheduler" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_stop_job"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/safe_area_margin_width"
                android:layout_marginEnd="@dimen/safe_area_margin_width"
                android:text="@string/stop_job_scheduler" />
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_start_service"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/safe_area_margin_width"
            android:layout_marginEnd="@dimen/safe_area_margin_width"
            android:text="@string/start_service" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_stop_service"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/safe_area_margin_width"
            android:layout_marginEnd="@dimen/safe_area_margin_width"
            android:text="@string/stop_service" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>