<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity"
        tools:showIn="@layout/activity_main_content">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/safe_area_margin">


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_package_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/safe_area_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:errorTextAppearance="@style/error_appearance">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_package_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/packagename"
                    android:enabled="false"
                    android:focusable="false"
                    android:inputType="textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_md5"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/safe_area_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_package_name"
                app:errorTextAppearance="@style/error_appearance">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_md5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/md5"
                    android:enabled="false"
                    android:focusable="false"
                    android:inputType="textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_sha1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/safe_area_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_md5"
                app:errorTextAppearance="@style/error_appearance">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_sha1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fingerprint_sha1"
                    android:enabled="false"
                    android:focusable="false"
                    android:inputType="textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_sha256"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/safe_area_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_sha1"
                app:errorTextAppearance="@style/error_appearance">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_sha256"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fingerprint_sha256"
                    android:enabled="false"
                    android:focusable="false"
                    android:inputType="textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_crt_digest"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/safe_area_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_sha256"
                app:errorTextAppearance="@style/error_appearance">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_crt_digest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fingerprint_apkcertificatedigestsha256"
                    android:enabled="false"
                    android:focusable="false"
                    android:inputType="textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_digest"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/safe_area_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_crt_digest"
                app:errorTextAppearance="@style/error_appearance">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_digest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fingerprint_apkdigest"
                    android:enabled="false"
                    android:focusable="false"
                    android:inputType="textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_location"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/safe_area_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_digest"
                app:errorTextAppearance="@style/error_appearance">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/preferred_language"
                    android:enabled="false"
                    android:focusable="false"
                    android:inputType="textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_jni"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/safe_area_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_location"
                app:errorTextAppearance="@style/error_appearance">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_from_jni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/strings_from_jni"
                    android:enabled="false"
                    android:focusable="false"
                    android:inputType="textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_special_str"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/safe_area_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_jni"
                app:errorTextAppearance="@style/error_appearance">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_special_str"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/special_string"
                    android:enabled="false"
                    android:focusable="false"
                    android:inputType="textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>